# Install default + dev dependencies with torch for CPU/cu126:
# uv sync --extra cpu -U
# uv sync --extra cu126 -U

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
# homepage = ""
repository = "https://github.com/TY-Cheng/torchvinecopulib"
documentation = "https://ty-cheng.github.io/torchvinecopulib/"
# "Bug Tracker" = ""

[project]
name = "torchvinecopulib"
version = "1.0.0"
requires-python = ">=3.12"
authors = [{ name = "Tuoyuan Cheng", email = "tuoyuan.cheng@nus.edu.sg" }]
# maintainers = []
description = "yet another vine copula library, using PyTorch."
readme = "README.md"
keywords = [
    "vine copula",
    "copula",
    "torch",
    "conditional simulation",
    "fastkde",
]
classifiers = [
    # "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=2", "scipy", 'fastkde']
[dependency-groups]
dev = [
    "coverage",
    "furo",
    "ipykernel",
    "matplotlib",
    "pandas",
    # "pot",
    "pytest",
    # "pyvinecopulib",
    "ruff",
    "sphinx_pyproject",
    "sphinx",
    "tokenize-rt",
    "yfinance",
]

[project.optional-dependencies]
cpu = ["torch>=2"]
cu126 = ["torch>=2"]

[tool.uv]
managed = true
default-groups = ["dev"]
conflicts = [[{ extra = "cpu" }, { extra = "cu126" }]]

[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.sphinx-pyproject]
source-dir = "docs"
build-dir = "docs/_build"
all_files = true
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.autosectionlabel",
    "sphinx.ext.autosummary",
    "sphinx.ext.coverage",
    "sphinx.ext.doctest",
    "sphinx.ext.extlinks",
    "sphinx.ext.githubpages",
    "sphinx.ext.graphviz",
    "sphinx.ext.ifconfig",
    "sphinx.ext.imgconverter",
    "sphinx.ext.inheritance_diagram",
    "sphinx.ext.intersphinx",
    "sphinx.ext.napoleon",
    "sphinx.ext.todo",
    "sphinx.ext.viewcode",
]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "furo"
